@@ -664,7 +664,7 @@ function checkSuccess($value,$success) {
 
 	sqlrcur_sendQuery($cur,"drop function testfunc(int,char(20))");
 	checkSuccess(sqlrcur_sendQuery($cur,"create function testfunc(int, char(20)) returns record as ' declare output record; begin select $1,$2 into output; return output; end;' language plpgsql"),1);
-	sqlrcur_prepareQuery($cur,"select * from testfunc(:int,:char) as (col1 int, col2 char(20))");
+	sqlrcur_prepareQuery($cur,"select * from testfunc(:int,:char) as (col1 int, col2 bpchar)");
 	sqlrcur_inputBind($cur,"int",5);
 	sqlrcur_inputBind($cur,"char","hello");
 	checkSuccess(sqlrcur_executeQuery($cur),1);
