@@ -627,7 +627,7 @@ catch {$cur sendQuery "drop function testfunc(int)"}
 
 catch {$cur sendQuery "drop function testfunc(int,char(20))"}
 checkSuccess [$cur sendQuery "create function testfunc(int, char(20)) returns record as ' declare output record; begin select \$1,\$2 into output; return output; end;' language plpgsql"] 1
-$cur prepareQuery "select * from testfunc(:int,:char) as (col1 int, col2 char(20))"
+$cur prepareQuery "select * from testfunc(:int,:char) as (col1 int, col2 bpchar)"
 $cur inputBind "int" 5
 $cur inputBind "char" "hello"
 checkSuccess [$cur executeQuery] 1
