@@ -35,6 +35,9 @@
 	fixed a bug that caused addresses="" to cause the sqlr-listener not to
 		start
 	added entries to FAQ about oracle instantclient and ubunu /bin/dash
+	updated postgresql tests to use bpchar rather than char(20) for
+		fetching results of stored procedure
+	renamed interbase.create.sh to firebird.create.sh
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
